@@ -2,6 +2,7 @@
 --------------------------------------------------------
 - BUG修复模块
   * 修正 util/cache/list 模块 GC 异常
+  * 修正 util/template/trimpath 重复引入异常
 
 0.4.9   (2018-04-12)
 --------------------------------------------------------
